--- a/TerminologyWebpage_en-US.html
+++ b/TerminologyWebpage_en-US.html
@@ -54,7 +54,7 @@
     <!-- LOC NOTE: External links might need to be updated if localized versions exist -->
     
     <figure class="content-figure">
-        <img src="SemanticTriangle_en-US.png" alt="The Semantic Triangle superimposed over a human head">
+        <img src="SemanticTriangle_en-US.png" alt="The Semantic Triangle superimposed over a human head, with the object corner aligned with eyes looking outward, the concept corner aligned with the brain, and the designation corner aligned between the ears and the mouth, plus the caption "Making meaning of language"">
         <!-- LOC NOTE: Image might need recreation if translatable content is hardcoded into it or adaptation for RTL languages or cultural considerations -->
         <!-- LOC NOTE: Image alt text should be translated -->
         <figcaption>
@@ -160,4 +160,5 @@
     <!-- LOC NOTE: A locale-specific JS files (e.g., terminology-quiz_es-MX.js) is needed -->
     <!-- LOC NOTE: Quiz feedback messages in JavaScript file will need translation -->
 </body>
+
 </html>
